Docs: Prevent playground footer gap

--- a/docs/src/scss/_playground.scss
+++ b/docs/src/scss/_playground.scss
@@ -229,6 +229,7 @@ div.playground {
 
 .playground-footer {
   display: flex;
+  margin-top: convert.px2em(-1px);
   margin-bottom: 1em;
   padding: convert.px2em(3px, 13.6px) convert.px2em(16px, 13.6px) convert.px2em(16px, 16px);
   overflow: hidden;
